// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sorting Plugins > MergeSort should produce deterministic execution trace 1`] = `
{
  "events": [
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        0,
        1,
      ],
      "step": 0,
      "type": "ARRAY_COMPARE",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "index": 0,
      "previousValue": 5,
      "step": 1,
      "type": "ARRAY_SET",
      "value": 3,
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "index": 1,
      "previousValue": 3,
      "step": 2,
      "type": "ARRAY_SET",
      "value": 5,
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        0,
        2,
      ],
      "step": 3,
      "type": "ARRAY_COMPARE",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        1,
        2,
      ],
      "step": 4,
      "type": "ARRAY_COMPARE",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "index": 0,
      "previousValue": 3,
      "step": 5,
      "type": "ARRAY_SET",
      "value": 3,
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "index": 1,
      "previousValue": 5,
      "step": 6,
      "type": "ARRAY_SET",
      "value": 5,
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "index": 2,
      "previousValue": 8,
      "step": 7,
      "type": "ARRAY_SET",
      "value": 8,
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        3,
        4,
      ],
      "step": 8,
      "type": "ARRAY_COMPARE",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "index": 3,
      "previousValue": 1,
      "step": 9,
      "type": "ARRAY_SET",
      "value": 1,
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "index": 4,
      "previousValue": 2,
      "step": 10,
      "type": "ARRAY_SET",
      "value": 2,
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        0,
        3,
      ],
      "step": 11,
      "type": "ARRAY_COMPARE",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        0,
        4,
      ],
      "step": 12,
      "type": "ARRAY_COMPARE",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "index": 0,
      "previousValue": 3,
      "step": 13,
      "type": "ARRAY_SET",
      "value": 1,
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "index": 1,
      "previousValue": 5,
      "step": 14,
      "type": "ARRAY_SET",
      "value": 2,
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "index": 2,
      "previousValue": 8,
      "step": 15,
      "type": "ARRAY_SET",
      "value": 3,
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "index": 3,
      "previousValue": 1,
      "step": 16,
      "type": "ARRAY_SET",
      "value": 5,
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "index": 4,
      "previousValue": 2,
      "step": 17,
      "type": "ARRAY_SET",
      "value": 8,
    },
  ],
  "metadata": {
    "algorithmName": "Merge Sort",
    "executionTimeMs": 0,
    "initialState": [
      5,
      3,
      8,
      1,
      2,
    ],
    "nodeCount": 5,
    "spaceComplexity": "O(n)",
    "timeComplexity": "O(n log n)",
  },
}
`;

exports[`Sorting Plugins > QuickSort should produce deterministic execution trace 1`] = `
{
  "events": [
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        0,
        4,
      ],
      "step": 0,
      "timestamp": 0,
      "type": "ARRAY_COMPARE",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        1,
        4,
      ],
      "step": 1,
      "timestamp": 0,
      "type": "ARRAY_COMPARE",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        2,
        4,
      ],
      "step": 2,
      "timestamp": 0,
      "type": "ARRAY_COMPARE",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        3,
        4,
      ],
      "step": 3,
      "timestamp": 0,
      "type": "ARRAY_COMPARE",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        0,
        3,
      ],
      "step": 4,
      "timestamp": 0,
      "type": "ARRAY_SWAP",
      "values": [
        1,
        5,
      ],
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        1,
        4,
      ],
      "step": 5,
      "timestamp": 0,
      "type": "ARRAY_SWAP",
      "values": [
        2,
        3,
      ],
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        2,
        4,
      ],
      "step": 6,
      "timestamp": 0,
      "type": "ARRAY_COMPARE",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        3,
        4,
      ],
      "step": 7,
      "timestamp": 0,
      "type": "ARRAY_COMPARE",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        2,
        4,
      ],
      "step": 8,
      "timestamp": 0,
      "type": "ARRAY_SWAP",
      "values": [
        3,
        8,
      ],
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "indices": [
        3,
        4,
      ],
      "step": 9,
      "timestamp": 0,
      "type": "ARRAY_COMPARE",
    },
  ],
  "metadata": {
    "algorithmName": "Quick Sort",
    "executionTimeMs": 0,
    "initialState": [
      5,
      3,
      8,
      1,
      2,
    ],
    "nodeCount": 5,
    "spaceComplexity": "O(log n)",
    "timeComplexity": "O(n log n)",
  },
}
`;
